--- a/.github/workflows/test-reference-implementation.yml
+++ b/.github/workflows/test-reference-implementation.yml
@@ -18,10 +18,6 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
-    defaults:
-      run:
-        working-directory: reference-implementation
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -31,16 +27,23 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: reference-implementation/package-lock.json
+          cache-dependency-path: 'reference-implementation/package-lock.json'
+      
+      - name: Set working directory for subsequent steps
+        run: echo "Working in reference-implementation directory"
+        working-directory: reference-implementation
 
       - name: Install dependencies
         run: npm ci
+        working-directory: reference-implementation
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps chromium
+        working-directory: reference-implementation
 
       - name: Run tests
         run: npm test
+        working-directory: reference-implementation
 
       - name: Upload test results
         if: always()
